# true_wind

./: .gitignore  README.rst  index.md  pyproject.toml
tests/: test_true_wind.py
true_wind/: main.py  truewind.kv
true_wind/resources/: draw_wind.py  error_message.py  graphic_solution.py  true_wind_angle.py  true_wind_direction.py  true_wind_speed.py
true_wind/templates/: draw_wind.kv  error_message.kv  graphic_solution.kv  kv_templates.kv
