[tool.poetry]
name = "true_wind"
version = "0.1.0"
description = "A kivy application that calculates a ship's true wind, using the apparent wind and the ship's wind"
authors = ["Dragos Manea <maneadr@gmail.com>"]
license = "GNU AFFERO GENERAL PUBLIC LICENSE"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.7"
docutils = "^0.16"
pygments = "^2.7.1"
pypiwin32 = "^223"
"kivy_deps.sdl2" = "0.1.*"
"kivy_deps.glew" = "0.1.*"
"kivy_deps.gstreamer" = "0.1.*"
install = "^1.3.4"
kivy = "1.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
mypy = "^0.782"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
